syntax = "proto3";

package common.v1;

import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/eslsoft/vocnet/api/gen/common/v1;commonv1";

// OpenAPI v2 (Swagger) specification for the entire API
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Vocnet API"
    version: "1.0"
    description: "Vocnet API for vocabulary learning and word management"
    contact: {
      name: "Vocnet API Support"
      url: "https://github.com/eslsoft/vocnet"
    }
  }
  schemes: HTTP
  schemes: HTTPS
  consumes: "application/json"
  produces: "application/json"
};

// ID request message
message IDRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}

// Pagination request parameters
message PaginationRequest {
  int32 limit = 1; // Number of items to return (default: 20, max: 100)
  int32 offset = 2; // Number of items to skip (default: 0)
}

// Pagination response metadata
message PaginationResponse {
  int32 total = 1; // Total number of items
  int32 page_no = 2; // Current page number (calculated from offset/limit)
}

// Supported languages
enum Language {
  LANGUAGE_UNSPECIFIED = 0;
  LANGUAGE_ENGLISH = 1; // en
  LANGUAGE_CHINESE = 2; // zh
  LANGUAGE_SPANISH = 3; // es
  LANGUAGE_FRENCH = 4; // fr
  LANGUAGE_GERMAN = 5; // de
  LANGUAGE_JAPANESE = 6; // ja
  LANGUAGE_KOREAN = 7; // ko
}
